# CSI5640-Project

./: Abstract- Draft.docx  Readme.md
KMeans/: CMakeLists.txt  Readme.md  kmeans.c  kmeans.h  main.c  picture_decoder.c  picture_decoder.h  pixel_functions.c  pixel_functions.h  run.sh  status_codes.h  stopWatch.c  stopWatch.h  types.c  types.h
OpenAcc_Example/: Readme.md
